--- a/_posts/2016-10-11-iOS状态栏的管理.md
+++ b/_posts/2016-10-11-iOS状态栏的管理.md
@@ -6,7 +6,7 @@ date:       2016-10-11 17:00:00
 author:     "Liu Peng"
 header-img: "assets/iOS基础技术/iOS状态栏的管理.jpg"
 tags:
-    - iOS绘画技术
+    - iOS基础技术
 ---
 
 ![iOS状态栏的管理.png]({{ site.url }}/assets/iOS基础技术/iOS状态栏的管理.png)
