--- a/_posts/2016-10-11-iOS状态栏的管理.md
+++ b/_posts/2016-10-11-iOS状态栏的管理.md
@@ -4,7 +4,7 @@ title:      iOS状态栏的管理
 excerpt:    "在iOS中, 我们可以通过两种方式来管理状态栏: 全局管理 or 局部管理"
 date:       2016-10-11 17:00:00
 author:     "Liu Peng"
-header-img: "assets/iOS基础技术/iOS状态栏的管理.jpg"
+header-img: "assets/iOS基础技术/iOS状态栏的管理-bg.jpg"
 tags:
     - iOS基础技术
 ---
