--- a/_posts/2016-06-24-iOS之枚举用法.md
+++ b/_posts/2016-06-24-iOS之枚举用法.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      iOS之枚举用法.md
-excerpt:    "枚举是C语言中的一种基本数据类型,是一个"被命名的整型常量"的集合,它不参与内存的占用和释放,我们在开发中使用枚举的目的只有一个,那就是为了增加代码的可读性"
+excerpt:    "枚举是C语言中的一种基本数据类型,是一个\"被命名的整型常量\"的集合,它不参与内存的占用和释放,我们在开发中使用枚举的目的只有一个,那就是为了增加代码的可读性"
 date:       2016-06-24 16:00:00
 author:     "Liu Peng"
 header-img: "assets/iOS基础技术/iOS之枚举用法-bg.jpg"
