--- a/_posts/2016-02-25-iOS获取设备信息与应用信息.md
+++ b/_posts/2016-02-25-iOS获取设备信息与应用信息.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      iOS获取设备信息与应用信息.md
+title:      iOS获取设备信息与应用信息
 excerpt:    ""
 date:       2016-02-25 11:00:00
 author:     "Liu Peng"
