--- a/_posts/2016-02-25-iOS调用系统功能与跳转到系统设置.md
+++ b/_posts/2016-02-25-iOS调用系统功能与跳转到系统设置.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      iOS调用系统功能与跳转到系统设置.md
+title:      iOS调用系统功能与跳转到系统设置
 excerpt:    ""
 date:       2016-02-25 14:00:00
 author:     "Liu Peng"
