--- a/_posts/2016-03-23-iOS修改文件模板与项目模板.md
+++ b/_posts/2016-03-23-iOS修改文件模板与项目模板.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      iOS修改文件模板与项目模板.md
+title:      iOS修改文件模板与项目模板
 excerpt:    ""
 date:       2016-03-23 20:00:00
 author:     "Liu Peng"
